--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,30 @@
+html,
+body {
+  height: 100%;
+}
+
+main {
+  background-color: #b8b8b8;
+}
+/* Navbar */
+nav {
+  background-color: #949396;
+}
+
+/* Card Css */
+div.card > div.card-body {
+  background-color: #cccccc;
+}
+.card-title {
+  color: #6b6b6b;
+}
+/* Comments Css */
 .comment {
   margin: 10px;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  background-color: #f5f5f5;
+  background-color: #cccccc;
   display: flex;
   justify-content: space-around;
 }
@@ -16,6 +37,13 @@
   margin: 1rem;
   padding: 0;
 }
-main {
-  margin-top: 1rem;
+
+.comment input {
+  background-color: #cccccc;
+}
+
+/* Footer */
+footer {
+  background-color: #949396;
+  text-align: center;
 }
